# ViralFlow.ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
backend/: main.py
backend/app/agents/: content_understanding.py  hashtag_research.py  optimizer.py  platform_adapters.py  scheduler.py  visuals.py
backend/app/graph/: workflow.py
backend/app/models/: schemas.py  state.py
backend/app/utils/: llm.py  tools.py
frontend/: app.py
